# NitroCppTest-EoghanMcGinty

./: .gitignore  README.md  README.md.txt
IntersectingRectangles/: CMakeLists.txt  CMakeSettings.json
IntersectingRectangles/source/: CMakeLists.txt  IntersectingRectangles.cpp  IntersectingRectangles.h  MyIntersection.cpp  MyIntersection.h  MyRectangle.cpp  MyRectangle.h  Rectangle.cpp  Rectangle.h
IntersectingRectangles/test/: CMakeLists.txt  IntersectingTest.cpp
IntersectingRectangles/test/json/: 1rect.json  badjson.json  badrect.json  multiple.json  none.json  rectarray.json
